# courier-oss

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: endpoints.py
src/db/: schemas.py
src/inference/: helpers.py  models.py
src/inference/text_inference_helpers/: helpers.py
src/lora/: evaluator.py  helpers.py  lora_train.py  models.py
src/model_manager/: model_manager.py  vllm_model_pool.py
